# TheGrokMCP

./: .env.example  .gitignore  .pre-commit-config.yaml  FUNDING.yml  README.md  SETUP.md  TODO.md  check_environment.py  examples.py  fix_issues.py  install.ps1  install.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: test.yml
src/: __init__.py  grok_client.py  server.py
src/tools/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  test_grok_client.py
